--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 locale                   : "en-US"
 title                    : "Isabelle Pham"
 title_separator          : "-"
-subtitle                 : "Example Website for Class"
+subtitle                 : "Technical Portfolio"
 name                     : &name "Isabelle Pham" # &name is a YAML anchor which can be *referenced later
-description              : &description "Example website for class "
+description              : &description "Technical Portfolio "
 url                      : https://isabellepham.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : 
@@ -98,7 +98,7 @@ analytics:
 author:
   name             : *name # *name is a YAML reference pointing to the &anchor earlier
   avatar           : "assets/img/IsabellePham_Headshot.JPEG"
-  bio              : "A junior at Vanderbilt University majoring in Computer Science and Human and Organizational Development with a minor in Digital Fabrication! "
+  bio              : "A junior at Vanderbilt University majoring in Computer Science and Human and Organizational Development with a minor in Digital Fabrication. "
   location         : "Nashville, TN"
   links:
     - label: "GitHub"
