--- a/_config.yml
+++ b/_config.yml
@@ -98,9 +98,7 @@ analytics:
 author:
   name             : *name # *name is a YAML reference pointing to the &anchor earlier
   avatar           : "assets/img/IsabellePham_Headshot.JPEG"
-  bio              : "Junior at Vanderbilt University majoring in Computer Science and Human and Organizational Development with a minor in Digital Fabrication. Seeking a role in finance where I can apply strong problem-solving, analytical, and technical skills. "
-  location         : "Nashville, TN"
-  links:
+  bio              : "Junior at Vanderbilt University majoring in Computer Science and Human and Organizational Development with a minor in Digital Fabrication. "
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/isabellepham"
