--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,9 @@ analytics:
 author:
   name             : *name # *name is a YAML reference pointing to the &anchor earlier
   avatar           : "assets/img/IsabellePham_Headshot.JPEG"
-  bio              : "Junior at Vanderbilt University majoring in Computer Science and Human and Organizational Development with a minor in Digital Fabrication. "
+  bio              : "A junior at Vanderbilt University majoring in Computer Science and Human and Organizational Development with a minor in Digital Fabrication "
+  location         : "Nashville, TN"
+  links:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/isabellepham"
