--- a/_config.yml
+++ b/_config.yml
@@ -279,3 +279,10 @@ compress_html:
   clippings: all
   ignore:
     envs: development
+
+
+# math 
+markdown: kramdown
+kramdown:
+  math_engine: mathjax
+
