--- a/_config.yml
+++ b/_config.yml
@@ -173,7 +173,9 @@ kramdown:
   toc_levels: 1..6
   smart_quotes: lsquo,rsquo,ldquo,rdquo
   enable_coderay: false
-
+  math_engine: mathjax
+  math_engine_opts: 
+    preview: false
 
 # Collections
 collections:
@@ -279,10 +281,3 @@ compress_html:
   clippings: all
   ignore:
     envs: development
-
-
-# math 
-markdown: kramdown
-kramdown:
-  math_engine: mathjax
-
